agregue imagen de mano con celular

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <button id="inicia_sesion_main">Inicia Sesion</button>
                 <button id="boton_unete_ahora_main">Únete ahora</button>
             </div>
-                    </div>
+            <img class="mano_celular_img" src="./imagenes/mano_celular.png" alt="mano celular">
+        </div>
         <div class="main_derecha">
             <div id="item1" class="unete_starbucks_rewards">
                 <p>Únete a Starbucks Rewards y desbloquea beneficios al ser Nivel Green, todo mientras obtienes estrellas</p>
