--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header class="header">
+    <header>
         <div class="header_izquierda">
             <img class="logo_starbucks_img" src="./imagenes/starbucks.png" alt="logo_starbucks">
             <a href="" class="menu"><p>Menú</p></a>
@@ -36,7 +36,7 @@
         </div>
         <div class="main_derecha">
             <div id="item1" class="unete_starbucks_rewards">
-                <p>Únete a Starbucks Rewards y desbloquea beneficios al ser Nivel Green, todo mientras obtienes estrellas</p>
+                <p>Únete a <STRong>Starbucks Rewards</STRong> y desbloquea beneficios al ser Nivel Green, todo mientras obtienes estrellas</p>
             </div>
             <section class="main_derecha1">
                 <div class=contenedor_beneficios>
