agregue media querys al codigo css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
             <button id="boton_inicio_sesion">Iniciar sesión</button>
             <button id="boton_unete_ahora">Únete ahora</button>
+            <img class="menu_hamburguesa" src="./imagenes/menu_hamburguesa.png" alt="menu hamburgusa">
         </div>
     </header>
     <main>
@@ -39,16 +40,14 @@
                 <p>Únete a <STRong>Starbucks Rewards</STRong> y desbloquea beneficios al ser Nivel Green, todo mientras obtienes estrellas</p>
             </div>
             <section class="main_derecha1">
-                <div class=contenedor_beneficios>
-                    <img src="./imagenes/nuevos-lanzamientos.png" alt="lanzamientos exclusivos">
+                <div class="contenedor_beneficios">
+                    <img id="lanzamientos" src="./imagenes/nuevos-lanzamientos.png" alt="lanzamientos exclusivos">
                     <p>Disfruta antes que nadie de lanzamientos exclusivos</p>
                 </div>
                 <div class="rellena_cafe">
                     <img src="./imagenes/refill-cafe.png" alt="rellena tu cafe">
                     <p>Rellena tu vaso de café del día</p>
                 </div>
-            </section>
-            <section class="main_derecha1-2">
                 <div class="bebida_cumpleaños">
                     <img src="./imagenes/cumpleaños.png" alt="bebida cumpleaños">
                     <p>Ven por tu bebida de cumpleaños</p>
@@ -70,8 +69,6 @@
                     <img src="./imagenes/card-gold.png" alt="tarjeta gold digital">
                     <p>Tarjeta Gold Digital</p>
                 </div>
-            </section>
-            <section class="main_derecha2-1">
                 <div class="bebida_pan_100">
                     <img src="./imagenes/100-estrellas.png" alt="bebida o pan por 100 estrellas">
                     <p>Bebida o pieza de panadería por cada 100 Estrellas acumuladas</p>
@@ -80,12 +77,30 @@
                     <img src="./imagenes/15-estrellas-aniversario.png" alt="15 estrellas cada aniversario">
                     <p>15 Estrellas cada aniversario</p>
                 </div>
+                <div class="rellena_tu_vaso">
+                    <img src="./imagenes/refill-cafe.png" alt="rellena tu vaso">
+                    <p>Rellena tu vaso de café del día</p>
+                </div>
+                <div class="ofertas_personalizadas">
+                    <img src="./imagenes/ofertas-personalizadas.png" alt="Ofertas personalizadas">
+                    <p>Ofertas exclusivas y personalizadas para ti</p>
+                </div>
+                <div class="bebida_de_cumpleaños2">
+                    <img src="./imagenes/cumpleaños.png" alt="Bebida de cumpleaños">
+                    <p>Ven por tu bebida de cumpleaños</p>
+                </div>
+                <div class="disfruta_lanzamientos_exclusivos">
+                    <img src="./imagenes/nuevos-lanzamientos.png" alt="Lanzamientos exclusivos">
+                    <p>Disfruta antes que nadie de lanzamientos exclusivos</p>
+                </div>
             </section>
         </div>
     </main>
-    <footer>
-        <img src="./imagenes/logoverde.png" alt="logotipo verde">
-        <div class="fotter">
+    <hr>
+    <div class="footer">
+        <img id="logo_verde" src="./imagenes/logoverde.png" alt="logotipo verde">
+        <hr>
+        <div class="fotter_contenedor">
             <section class="footer_izq">
                 <p>Sobre nosotros</p>
                 <a href="https://historias.starbucks.com/stories/2018/escuchando-a-la-tierra-creando-el-centro-de-visitantes-starbucks-en-la-hacienda-alsacia/">Historias Starbucks</a>
@@ -97,6 +112,13 @@
                 <p>Formas de comprar</p>
             </section>
         </div>
-    </footer>
+        <hr class="ultimo_hr">
+        <div class="redes_sociales">
+            <a href="https://www.facebook.com/StarbucksMexico"><img src="./imagenes/facebook.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/starbucksMex/"><img src="./imagenes/instagram.png" alt="Instagram"></a>
+            <a href="https://x.com/StarbucksMex"><img src="./imagenes/gorjeo.png" alt="twitter"></a>
+            <a href="https://www.youtube.com/user/StarbucksMexico?app=desktop"><img src="./imagenes/youtube.png" alt="Youtube"></a>
+        </div>
+    </div>
 </body>
 </html>
