alinie el icono de ubicacion del header

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div class="header_derecha">
             <div>
                 <img class="icono_ubicacion" src="./imagenes/ubicacion.jpg" alt="icono de ubicacion">
+            </div>
+            <div>
                 <p class="localiza_tienda">Localiza tu tienda</p>
             </div>
             <button id="boton_inicio_sesion">Iniciar sesión</button>
